--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,7 @@ button{
 
 input[type="text"]{
   font-size: 1.6rem;
+  width: 10rem;
   padding: 10px;
   border: 2px solid ☐hsla(0, 0%, 80%, 0.5);
   border-radius: 5px;
@@ -78,7 +79,7 @@ delete-button, .move-button{
 
 @media (max-width: 400px) {
   h1{
-  font-size: 2rem;
+  font-size: 3rem;
 }
 input[type="text"]{
   font-size: 1.2rem;
@@ -99,7 +100,7 @@ button{
 }
 
 li{
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: bold;
   padding: 15px;
   background-color: hsl(0, 0%, 97%);
